CSP-NL/CSPParser.py
# Generated from CSP.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CSPParser ( Parser ):

    grammarFileName = "CSP.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'='", "'channel'", "','", 
                     "':'", "'{'", "'..'", "'}'", "'assert'", "':['", "'has trace'", 
                     "']'", "'<'", "'>'", "'deadlock free'", "'divergence free'", 
                     "'deterministic'", "'&'", "'[]'", "'['", "'||'", "'[|'", 
                     "'|]'", "'|||'", "';'", "'->'", "'?'", "'$'", "'!'", 
                     "'.'", "'STOP'", "'SKIP'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "STOP_RULE", "SKIP_RULE", "BOOL", "ID", "INT", "WS" ]

    RULE_cspFile = 0
    RULE_processDefinition = 1
    RULE_channelDefinition = 2
    RULE_assertion = 3
    RULE_assertionType = 4
    RULE_assertionModel = 5
    RULE_trace = 6
    RULE_parameters = 7
    RULE_expression = 8
    RULE_prefixExpression = 9
    RULE_inputPatternExpression = 10
    RULE_restrictedInputExpression = 11
    RULE_nondeterministicRestrictedInputExpression = 12
    RULE_outputExpression = 13
    RULE_nondeterministicInputExpression = 14
    RULE_baseExpression = 15
    RULE_eventList = 16
    RULE_event = 17

    ruleNames =  [ "cspFile", "processDefinition", "channelDefinition", 
                   "assertion", "assertionType", "assertionModel", "trace", 
                   "parameters", "expression", "prefixExpression", "inputPatternExpression", 
                   "restrictedInputExpression", "nondeterministicRestrictedInputExpression", 
                   "outputExpression", "nondeterministicInputExpression", 
                   "baseExpression", "eventList", "event" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    STOP_RULE=32
    SKIP_RULE=33
    BOOL=34
    ID=35
    INT=36
    WS=37

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class CspFileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def processDefinition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSPParser.ProcessDefinitionContext)
            else:
                return self.getTypedRuleContext(CSPParser.ProcessDefinitionContext,i)


        def channelDefinition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSPParser.ChannelDefinitionContext)
            else:
                return self.getTypedRuleContext(CSPParser.ChannelDefinitionContext,i)


        def assertion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSPParser.AssertionContext)
            else:
                return self.getTypedRuleContext(CSPParser.AssertionContext,i)


        def getRuleIndex(self):
            return CSPParser.RULE_cspFile

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCspFile" ):
                listener.enterCspFile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCspFile" ):
                listener.exitCspFile(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCspFile" ):
                return visitor.visitCspFile(self)
            else:
                return visitor.visitChildren(self)




    def cspFile(self):

        localctx = CSPParser.CspFileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_cspFile)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 39
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [35]:
                    self.state = 36
                    self.processDefinition()
                    pass
                elif token in [4]:
                    self.state = 37
                    self.channelDefinition()
                    pass
                elif token in [10]:
                    self.state = 38
                    self.assertion()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 41 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 34359739408) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProcessDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(CSPParser.ID, 0)

        def expression(self):
            return self.getTypedRuleContext(CSPParser.ExpressionContext,0)


        def parameters(self):
            return self.getTypedRuleContext(CSPParser.ParametersContext,0)


        def getRuleIndex(self):
            return CSPParser.RULE_processDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProcessDefinition" ):
                listener.enterProcessDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProcessDefinition" ):
                listener.exitProcessDefinition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcessDefinition" ):
                return visitor.visitProcessDefinition(self)
            else:
                return visitor.visitChildren(self)




    def processDefinition(self):

        localctx = CSPParser.ProcessDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_processDefinition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self.match(CSPParser.ID)
            self.state = 45
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 44
                self.match(CSPParser.T__0)


            self.state = 48
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==35:
                self.state = 47
                self.parameters()


            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 50
                self.match(CSPParser.T__1)


            self.state = 53
            self.match(CSPParser.T__2)
            self.state = 54
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ChannelDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(CSPParser.ID)
            else:
                return self.getToken(CSPParser.ID, i)

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(CSPParser.INT)
            else:
                return self.getToken(CSPParser.INT, i)

        def getRuleIndex(self):
            return CSPParser.RULE_channelDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterChannelDefinition" ):
                listener.enterChannelDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitChannelDefinition" ):
                listener.exitChannelDefinition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitChannelDefinition" ):
                return visitor.visitChannelDefinition(self)
            else:
                return visitor.visitChildren(self)




    def channelDefinition(self):

        localctx = CSPParser.ChannelDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_channelDefinition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(CSPParser.T__3)
            self.state = 57
            self.match(CSPParser.ID)
            self.state = 62
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 58
                self.match(CSPParser.T__4)
                self.state = 59
                self.match(CSPParser.ID)
                self.state = 64
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6:
                self.state = 65
                self.match(CSPParser.T__5)
                self.state = 66
                self.match(CSPParser.T__6)
                self.state = 67
                self.match(CSPParser.INT)
                self.state = 70
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==8:
                    self.state = 68
                    self.match(CSPParser.T__7)
                    self.state = 69
                    self.match(CSPParser.INT)


                self.state = 72
                self.match(CSPParser.T__8)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssertionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(CSPParser.ID, 0)

        def assertionType(self):
            return self.getTypedRuleContext(CSPParser.AssertionTypeContext,0)


        def getRuleIndex(self):
            return CSPParser.RULE_assertion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssertion" ):
                listener.enterAssertion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssertion" ):
                listener.exitAssertion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssertion" ):
                return visitor.visitAssertion(self)
            else:
                return visitor.visitChildren(self)




    def assertion(self):

        localctx = CSPParser.AssertionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_assertion)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(CSPParser.T__9)
            self.state = 76
            self.match(CSPParser.ID)
            self.state = 77
            self.assertionType()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssertionTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def trace(self):
            return self.getTypedRuleContext(CSPParser.TraceContext,0)


        def assertionModel(self):
            return self.getTypedRuleContext(CSPParser.AssertionModelContext,0)


        def getRuleIndex(self):
            return CSPParser.RULE_assertionType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssertionType" ):
                listener.enterAssertionType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssertionType" ):
                listener.exitAssertionType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssertionType" ):
                return visitor.visitAssertionType(self)
            else:
                return visitor.visitChildren(self)




    def assertionType(self):

        localctx = CSPParser.AssertionTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_assertionType)
        try:
            self.state = 99
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 79
                self.match(CSPParser.T__10)
                self.state = 80
                self.match(CSPParser.T__11)
                self.state = 81
                self.match(CSPParser.T__12)
                self.state = 82
                self.match(CSPParser.T__5)
                self.state = 83
                self.match(CSPParser.T__13)
                self.state = 84
                self.trace()
                self.state = 85
                self.match(CSPParser.T__14)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 87
                self.match(CSPParser.T__10)
                self.state = 88
                self.assertionModel()
                self.state = 89
                self.match(CSPParser.T__12)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 91
                self.match(CSPParser.T__10)
                self.state = 92
                self.assertionModel()
                self.state = 93
                self.match(CSPParser.T__12)
                self.state = 94
                self.match(CSPParser.T__5)
                self.state = 95
                self.match(CSPParser.T__13)
                self.state = 96
                self.trace()
                self.state = 97
                self.match(CSPParser.T__14)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssertionModelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CSPParser.RULE_assertionModel

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssertionModel" ):
                listener.enterAssertionModel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssertionModel" ):
                listener.exitAssertionModel(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssertionModel" ):
                return visitor.visitAssertionModel(self)
            else:
                return visitor.visitChildren(self)




    def assertionModel(self):

        localctx = CSPParser.AssertionModelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_assertionModel)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 458752) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TraceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def event(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSPParser.EventContext)
            else:
                return self.getTypedRuleContext(CSPParser.EventContext,i)


        def getRuleIndex(self):
            return CSPParser.RULE_trace

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTrace" ):
                listener.enterTrace(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTrace" ):
                listener.exitTrace(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTrace" ):
                return visitor.visitTrace(self)
            else:
                return visitor.visitChildren(self)




    def trace(self):

        localctx = CSPParser.TraceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_trace)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.event()
            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 104
                self.match(CSPParser.T__4)
                self.state = 105
                self.event()
                self.state = 110
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametersContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(CSPParser.ID)
            else:
                return self.getToken(CSPParser.ID, i)

        def getRuleIndex(self):
            return CSPParser.RULE_parameters

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameters" ):
                listener.enterParameters(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameters" ):
                listener.exitParameters(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameters" ):
                return visitor.visitParameters(self)
            else:
                return visitor.visitChildren(self)




    def parameters(self):

        localctx = CSPParser.ParametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_parameters)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(CSPParser.ID)
            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==5:
                self.state = 112
                self.match(CSPParser.T__4)
                self.state = 113
                self.match(CSPParser.ID)
                self.state = 118
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOOL(self):
            return self.getToken(CSPParser.BOOL, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSPParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(CSPParser.ExpressionContext,i)


        def nondeterministicRestrictedInputExpression(self):
            return self.getTypedRuleContext(CSPParser.NondeterministicRestrictedInputExpressionContext,0)


        def restrictedInputExpression(self):
            return self.getTypedRuleContext(CSPParser.RestrictedInputExpressionContext,0)


        def inputPatternExpression(self):
            return self.getTypedRuleContext(CSPParser.InputPatternExpressionContext,0)


        def outputExpression(self):
            return self.getTypedRuleContext(CSPParser.OutputExpressionContext,0)


        def nondeterministicInputExpression(self):
            return self.getTypedRuleContext(CSPParser.NondeterministicInputExpressionContext,0)


        def prefixExpression(self):
            return self.getTypedRuleContext(CSPParser.PrefixExpressionContext,0)


        def baseExpression(self):
            return self.getTypedRuleContext(CSPParser.BaseExpressionContext,0)


        def eventList(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSPParser.EventListContext)
            else:
                return self.getTypedRuleContext(CSPParser.EventListContext,i)


        def getRuleIndex(self):
            return CSPParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = CSPParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 16
        self.enterRecursionRule(localctx, 16, self.RULE_expression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 120
                self.match(CSPParser.BOOL)
                self.state = 121
                self.match(CSPParser.T__18)
                self.state = 122
                self.expression(13)
                pass

            elif la_ == 2:
                self.state = 123
                self.nondeterministicRestrictedInputExpression()
                pass

            elif la_ == 3:
                self.state = 124
                self.restrictedInputExpression()
                pass

            elif la_ == 4:
                self.state = 125
                self.inputPatternExpression()
                pass

            elif la_ == 5:
                self.state = 126
                self.outputExpression()
                pass

            elif la_ == 6:
                self.state = 127
                self.nondeterministicInputExpression()
                pass

            elif la_ == 7:
                self.state = 128
                self.prefixExpression()
                pass

            elif la_ == 8:
                self.state = 129
                self.baseExpression()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 163
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,13,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 161
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
                    if la_ == 1:
                        localctx = CSPParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 132
                        if not self.precpred(self._ctx, 12):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 12)")
                        self.state = 133
                        self.match(CSPParser.T__19)
                        self.state = 134
                        self.expression(13)
                        pass

                    elif la_ == 2:
                        localctx = CSPParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 135
                        if not self.precpred(self._ctx, 11):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 11)")
                        self.state = 136
                        self.match(CSPParser.T__20)
                        self.state = 137
                        self.match(CSPParser.T__6)
                        self.state = 138
                        self.eventList()
                        self.state = 139
                        self.match(CSPParser.T__8)
                        self.state = 140
                        self.match(CSPParser.T__21)
                        self.state = 141
                        self.match(CSPParser.T__6)
                        self.state = 142
                        self.eventList()
                        self.state = 143
                        self.match(CSPParser.T__8)
                        self.state = 144
                        self.match(CSPParser.T__12)
                        self.state = 145
                        self.expression(12)
                        pass

                    elif la_ == 3:
                        localctx = CSPParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 147
                        if not self.precpred(self._ctx, 10):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 10)")
                        self.state = 148
                        self.match(CSPParser.T__22)
                        self.state = 149
                        self.match(CSPParser.T__6)
                        self.state = 150
                        self.eventList()
                        self.state = 151
                        self.match(CSPParser.T__8)
                        self.state = 152
                        self.match(CSPParser.T__23)
                        self.state = 153
                        self.expression(11)
                        pass

                    elif la_ == 4:
                        localctx = CSPParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 155
                        if not self.precpred(self._ctx, 9):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 9)")
                        self.state = 156
                        self.match(CSPParser.T__24)
                        self.state = 157
                        self.expression(10)
                        pass

                    elif la_ == 5:
                        localctx = CSPParser.ExpressionContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 158
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 159
                        self.match(CSPParser.T__25)
                        self.state = 160
                        self.expression(9)
                        pass

             
                self.state = 165
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class PrefixExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def event(self):
            return self.getTypedRuleContext(CSPParser.EventContext,0)


        def expression(self):
            return self.getTypedRuleContext(CSPParser.ExpressionContext,0)


        def getRuleIndex(self):
            return CSPParser.RULE_prefixExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrefixExpression" ):
                listener.enterPrefixExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrefixExpression" ):
                listener.exitPrefixExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrefixExpression" ):
                return visitor.visitPrefixExpression(self)
            else:
                return visitor.visitChildren(self)




    def prefixExpression(self):

        localctx = CSPParser.PrefixExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_prefixExpression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self.event()
            self.state = 167
            self.match(CSPParser.T__26)
            self.state = 168
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InputPatternExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(CSPParser.ID)
            else:
                return self.getToken(CSPParser.ID, i)

        def expression(self):
            return self.getTypedRuleContext(CSPParser.ExpressionContext,0)


        def getRuleIndex(self):
            return CSPParser.RULE_inputPatternExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInputPatternExpression" ):
                listener.enterInputPatternExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInputPatternExpression" ):
                listener.exitInputPatternExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInputPatternExpression" ):
                return visitor.visitInputPatternExpression(self)
            else:
                return visitor.visitChildren(self)




    def inputPatternExpression(self):

        localctx = CSPParser.InputPatternExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_inputPatternExpression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 170
            self.match(CSPParser.ID)
            self.state = 171
            self.match(CSPParser.T__27)
            self.state = 172
            self.match(CSPParser.ID)
            self.state = 173
            self.match(CSPParser.T__26)
            self.state = 174
            self.expression(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RestrictedInputExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(CSPParser.ID)
            else:
                return self.getToken(CSPParser.ID, i)

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(CSPParser.INT)
            else:
                return self.getToken(CSPParser.INT, i)

        def expression(self):
            return self.getTypedRuleContext(CSPParser.ExpressionContext,0)


        def getRuleIndex(self):
            return CSPParser.RULE_restrictedInputExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRestrictedInputExpression" ):
                listener.enterRestrictedInputExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRestrictedInputExpression" ):
                listener.exitRestrictedInputExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRestrictedInputExpression" ):
                return visitor.visitRestrictedInputExpression(self)
            else:
                return visitor.visitChildren(self)




    def restrictedInputExpression(self):
